# Cortexa

./: .gitignore  App.tsx  CNAME  README.md  index.html  metadata.json  package.json  wrangler.jsonc
cortex-engine/: .env.example  .gitignore  Dockerfile  PROVENANCE.md  alembic.ini  dev_server.py  entrypoint.sh  pyproject.toml  requirements.txt
cortex-engine/alembic/: env.py
cortex-engine/alembic/versions/: 001_initial_schema.py  002_calibration_and_cost_configs.py  003_add_provenance_graph.py
cortex-engine/app/: auth.py  config.py  events.py  main.py
cortex-engine/app/db/: database.py  tables.py
cortex-engine/app/models/: check.py  gate.py
cortex-engine/app/routes/: auth.py  check.py  gate.py  health.py  memory.py  shield.py  stream.py
cortex-engine/app/services/: attributor.py  checker.py  decomposer.py  nli.py  numerical.py
cortex-engine/cortex/: __init__.py  config.py  database.py  models.py
cortex-engine/cortex/api/: app.py  attribution.py  dashboard.py  health.py  memories.py  transactions.py
cortex-engine/cortex/attribution/: __init__.py  eas.py
cortex-engine/cortex/compliance/: __init__.py  provenance.py
cortex-engine/cortex/db/: tables.py
cortex-engine/docs/: provenance-graph.md
cortex-engine/results/: stress_test_20260225_170118.json  stress_test_20260225_180211.json
cortex-engine/scripts/: analyze_failures.py  download_model.py  stress_test.py  terralink_source_aggregator.py
cortex-engine/tests/: conftest.py  test_api.py  test_attributor.py  test_check.py  test_eas.py  test_models.py  test_provenance.py  test_two_phase.py
(+150 files in other folders)
